Fixing a layout issue in the Weblcms concerning the location of the student view button.

--- a/layout/aqua/css/common_general.css
+++ b/layout/aqua/css/common_general.css
@@ -175,16 +175,17 @@ img {
 	outline: none;
 }
 
-#helpitem {
+#trailbox #help_item, #trailbox #extra_item {
 	float: right;
 	height: 26px;
 	line-height: 26px;
+	margin-left: 4px;
 }
 
 /*****************************************************
  *  FOOTER STYLES                                    *
  *****************************************************/
-#footer,#sitemap {
+#footer, #sitemap {
 	clear: both;
 	padding-left: 19px;
 	padding-right: 19px;
