--- a/layout/aqua/css/weblcms.css
+++ b/layout/aqua/css/weblcms.css
@@ -394,3 +394,14 @@ table.forum .quotecontent,.attachcontent {
 .link_iframe {
 	
 }
+
+/****************************
+ * Student view link styles *
+ ****************************/
+div.student_view
+{
+	position: fixed;
+	right: 19px;
+	top: 5px;
+	/*float: right;*/
+}
